Add rate limit, remove profile
