# dto/profile.go
@@ -1,7 +1,0 @@
-package dto
-
-type ProfileResponse struct {
-	Id    int64  `json:"id"`
-	Email string `json:"email"`
-	Role  string `json:"role"`
-}
